<resources>
    <string name="app_name">My Contacts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_contacts">All Contacts</string>
    <string name="menu_work">Work</string>
    <string name="menu_family">Family</string>
    <string name="menu_school">School</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_course">Course</string>
    <string name="search">Search</string>
    <string name="add_contact">ADD CONTACT</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="mail">Mail</string>
    <string name="exit">Exit</string>
    <string name="delete_contact">DELETE CONTACT</string>
    <string name="group">Group</string>
    <string name="update_contact">Update Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number :</string>
    <string name="name_surname"><![CDATA[Name & Surname:]]></string>
    <string name="adress">Adress :</string>
    <string name="mail_adress">Mail Adress :</string>
</resources>